[gd_scene load_steps=19 format=3 uid="uid://bgo5xlu70ifr5"]

[ext_resource type="Script" path="res://minion/minion.gd" id="1_xslsr"]
[ext_resource type="Texture2D" uid="uid://bl2o7vhkqj2tl" path="res://assets/chomposaurus/atk.png" id="2_2s38t"]
[ext_resource type="Texture2D" uid="uid://dr2ahqyjdfpr5" path="res://assets/chomposaurus/dmg.png" id="3_bywlp"]
[ext_resource type="Texture2D" uid="uid://bs3b5xx7clj2l" path="res://assets/chomposaurus/chomp_idle1.png" id="3_gqqqa"]
[ext_resource type="Texture2D" uid="uid://cr650ubgqe6r7" path="res://assets/chomposaurus/chomp_idle2.png" id="4_e046a"]
[ext_resource type="Texture2D" uid="uid://7sjfvmhaog3y" path="res://assets/chomposaurus/chomp_idle3.png" id="5_r2dj1"]
[ext_resource type="Texture2D" uid="uid://cxfoi0mjkndv2" path="res://assets/chomposaurus/prepare_atk.png" id="6_x8g6d"]
[ext_resource type="Texture2D" uid="uid://csvuhgc51bib" path="res://assets/chomposaurus/run1.png" id="7_nsx5i"]
[ext_resource type="Texture2D" uid="uid://dnexhanmmg1rx" path="res://assets/chomposaurus/run2.png" id="8_wssru"]
[ext_resource type="Texture2D" uid="uid://bjldju0hnm3el" path="res://assets/chomposaurus/run3.png" id="9_bdo55"]
[ext_resource type="Texture2D" uid="uid://bxqv7wfrrl2k1" path="res://assets/chomposaurus/run4.png" id="10_eekdd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ptiko"]
radius = 6.255

[sub_resource type="Animation" id="Animation_yefpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathToTarget/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PathToTarget/PathFollow2D/MinionSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"prepare_attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PathToTarget/PathFollow2D/MinionSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_83ubn"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathToTarget/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PathToTarget/PathFollow2D/MinionSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"attack", &"damaged", &"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PathToTarget/PathFollow2D/MinionSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(2896.31),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alsmm"]
_data = {
"RESET": SubResource("Animation_yefpy"),
"atak": SubResource("Animation_83ubn")
}

[sub_resource type="Curve2D" id="Curve2D_oeu6p"]
resource_local_to_scene = true

[sub_resource type="SpriteFrames" id="SpriteFrames_un3jw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2s38t")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bywlp")
}],
"loop": true,
"name": &"damaged",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gqqqa")
}, {
"duration": 1.0,
"texture": ExtResource("4_e046a")
}, {
"duration": 1.0,
"texture": ExtResource("5_r2dj1")
}, {
"duration": 1.0,
"texture": ExtResource("4_e046a")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x8g6d")
}],
"loop": false,
"name": &"prepare_attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_nsx5i")
}, {
"duration": 1.0,
"texture": ExtResource("8_wssru")
}, {
"duration": 1.0,
"texture": ExtResource("9_bdo55")
}, {
"duration": 1.0,
"texture": ExtResource("10_eekdd")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7a2a"]

[node name="Minion" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_xslsr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.75, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_ptiko")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PrepareAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_alsmm")
}

[node name="PathToTarget" type="Path2D" parent="."]
curve = SubResource("Curve2D_oeu6p")

[node name="PathFollow2D" type="PathFollow2D" parent="PathToTarget"]
loop = false

[node name="MinionSprite" type="AnimatedSprite2D" parent="PathToTarget/PathFollow2D"]
position = Vector2(-5, 3)
scale = Vector2(0.349609, 0.352384)
sprite_frames = SubResource("SpriteFrames_un3jw")
animation = &"prepare_attack"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 21)
shape = SubResource("RectangleShape2D_n7a2a")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="PrepareAttackTimer" to="." method="_on_prepare_attack_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
